--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -2077,38 +2077,26 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 110, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|WS_TABSTOP, 490, 13, 129, 138
 }
 
-ASS_CONVERSION_DOCUMENTO_1 DIALOG DISCARDABLE 99, 64, 626, 384
+ASS_CONVERSION_DOCUMENTO_5 DIALOG DISCARDABLE 99, 64, 626, 384
 STYLE WS_CHILD|DS_3DLOOK|WS_VISIBLE
 FONT 8, "MS Sans Serif"
 {
-  CONTROL "Documento origen", -1, "Button", BS_GROUPBOX, 1, 2, 622, 90
-  CONTROL "", 100, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|WS_VSCROLL|WS_TABSTOP, 76, 14, 318, 359
-  CONTROL "Documento origen", -1, "Static", WS_GROUP, 6, 18, 67, 8
-  CONTROL "", 110, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|WS_TABSTOP, 76, 30, 125, 134
-  CONTROL "", 120, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 235, 31, 60, 12
-  CONTROL "", 130, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 334, 31, 60, 12
-  CONTROL "Desde", 4001, "Static", WS_GROUP, 204, 35, 26, 8
-  CONTROL "Hasta ", 4002, "Static", WS_GROUP, 303, 35, 26, 8
-  CONTROL "Rango de fechas", -1, "Static", WS_GROUP, 6, 33, 60, 8
-  CONTROL "", 140, "Edit", WS_BORDER|WS_TABSTOP, 76, 46, 86, 12
-  CONTROL "", 141, "Edit", WS_BORDER|WS_TABSTOP, 164, 46, 230, 12
-  CONTROL "Cliente", 142, "Static", WS_GROUP, 6, 50, 27, 8
-  CONTROL "", 150, "Edit", WS_BORDER|WS_TABSTOP, 76, 60, 86, 12
-  CONTROL "", 151, "Edit", WS_BORDER|WS_TABSTOP, 164, 60, 230, 12
-  CONTROL "Proveedor", 152, "Static", WS_GROUP, 6, 64, 38, 8
-  CONTROL "Documento destino", -1, "Button", BS_GROUPBOX, 1, 94, 622, 287
-  CONTROL "", 160, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|WS_VSCROLL|WS_TABSTOP, 76, 107, 318, 359
-  CONTROL "", 170, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 76, 124, 40, 12
-  CONTROL "", 180, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 76, 139, 60, 12
-  CONTROL "", 190, "Edit", WS_BORDER|WS_TABSTOP, 76, 154, 86, 12
-  CONTROL "", 191, "Edit", WS_BORDER|WS_TABSTOP, 164, 154, 230, 12
-  CONTROL "Documento destino", -1, "Static", WS_GROUP, 6, 111, 67, 8
-  CONTROL "Serie destino", -1, "Static", WS_GROUP, 6, 128, 46, 8
-  CONTROL "Fecha documento", -1, "Static", WS_GROUP, 6, 143, 63, 8
-  CONTROL "Empresa destino", 192, "Static", WS_GROUP, 6, 158, 57, 8
-  CONTROL "", 200, "Edit", WS_BORDER|WS_TABSTOP, 76, 74, 86, 12
-  CONTROL "", 201, "Edit", WS_BORDER|WS_TABSTOP, 164, 74, 230, 12
-  CONTROL "Artículo", 202, "Static", WS_GROUP, 6, 78, 38, 8
+  CONTROL "Condiciones", -1, "Button", BS_GROUPBOX, 1, 2, 622, 71
+  CONTROL "", 140, "Edit", WS_BORDER|WS_TABSTOP, 76, 29, 86, 12
+  CONTROL "", 141, "Edit", WS_BORDER|WS_TABSTOP, 164, 29, 454, 12
+  CONTROL "Cliente", 142, "Static", WS_GROUP, 6, 33, 27, 8
+  CONTROL "", 200, "Edit", WS_BORDER|WS_TABSTOP, 76, 43, 86, 12
+  CONTROL "", 201, "Edit", WS_BORDER|WS_TABSTOP, 164, 43, 454, 12
+  CONTROL "Artículo", 202, "Static", WS_GROUP, 6, 47, 38, 8
+  CONTROL "", 210, "Edit", WS_BORDER|WS_TABSTOP, 76, 57, 86, 12
+  CONTROL "", 211, "Edit", WS_BORDER|WS_TABSTOP, 164, 57, 454, 12
+  CONTROL "Almacén", 212, "Static", WS_GROUP, 6, 61, 38, 8
+  CONTROL "", 110, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|WS_TABSTOP, 76, 14, 125, 134
+  CONTROL "", 120, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 235, 15, 60, 12
+  CONTROL "", 130, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 334, 15, 60, 12
+  CONTROL "Desde", 4001, "Static", WS_GROUP, 205, 19, 26, 8
+  CONTROL "Hasta ", 4002, "Static", WS_GROUP, 301, 19, 26, 8
+  CONTROL "Rango de fechas", 4003, "Static", WS_GROUP, 6, 18, 60, 8
 }
 
 ASSDOCAUTO DIALOG DISCARDABLE -157, -139, 567, 315
@@ -20891,5 +20879,39 @@ FONT 8, "MS Sans Serif"
   CONTROL "Tipo de documento", 4001, "Static", WS_GROUP, 7, 48, 67, 8
   CONTROL "", 130, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|WS_VSCROLL|WS_TABSTOP, 99, 59, 250, 359
   CONTROL "Tipo de documento", 4004, "Static", WS_GROUP, 7, 63, 67, 8
+}
+
+ASS_CONVERSION_DOCUMENTO_1 DIALOG DISCARDABLE 99, 64, 626, 384
+STYLE WS_CHILD|DS_3DLOOK|WS_VISIBLE
+FONT 8, "MS Sans Serif"
+{
+  CONTROL "Documento origen", -1, "Button", BS_GROUPBOX, 1, 2, 622, 90
+  CONTROL "", 100, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|WS_VSCROLL|WS_TABSTOP, 76, 14, 318, 359
+  CONTROL "Documento origen", -1, "Static", WS_GROUP, 6, 18, 67, 8
+  CONTROL "", 110, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|WS_TABSTOP, 76, 30, 125, 134
+  CONTROL "", 120, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 235, 31, 60, 12
+  CONTROL "", 130, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 334, 31, 60, 12
+  CONTROL "Desde", 4001, "Static", WS_GROUP, 204, 35, 26, 8
+  CONTROL "Hasta ", 4002, "Static", WS_GROUP, 303, 35, 26, 8
+  CONTROL "Rango de fechas", -1, "Static", WS_GROUP, 6, 33, 60, 8
+  CONTROL "", 140, "Edit", WS_BORDER|WS_TABSTOP, 76, 46, 86, 12
+  CONTROL "", 141, "Edit", WS_BORDER|WS_TABSTOP, 164, 46, 230, 12
+  CONTROL "Cliente", 142, "Static", WS_GROUP, 6, 50, 27, 8
+  CONTROL "", 150, "Edit", WS_BORDER|WS_TABSTOP, 76, 60, 86, 12
+  CONTROL "", 151, "Edit", WS_BORDER|WS_TABSTOP, 164, 60, 230, 12
+  CONTROL "Proveedor", 152, "Static", WS_GROUP, 6, 64, 38, 8
+  CONTROL "Documento destino", -1, "Button", BS_GROUPBOX, 1, 94, 622, 287
+  CONTROL "", 160, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|WS_VSCROLL|WS_TABSTOP, 76, 107, 318, 359
+  CONTROL "", 170, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 76, 124, 40, 12
+  CONTROL "", 180, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 76, 139, 60, 12
+  CONTROL "", 190, "Edit", WS_BORDER|WS_TABSTOP, 76, 154, 86, 12
+  CONTROL "", 191, "Edit", WS_BORDER|WS_TABSTOP, 164, 154, 230, 12
+  CONTROL "Documento destino", -1, "Static", WS_GROUP, 6, 111, 67, 8
+  CONTROL "Serie destino", -1, "Static", WS_GROUP, 6, 128, 46, 8
+  CONTROL "Fecha documento", -1, "Static", WS_GROUP, 6, 143, 63, 8
+  CONTROL "Empresa destino", 192, "Static", WS_GROUP, 6, 158, 57, 8
+  CONTROL "", 200, "Edit", WS_BORDER|WS_TABSTOP, 76, 74, 86, 12
+  CONTROL "", 201, "Edit", WS_BORDER|WS_TABSTOP, 164, 74, 230, 12
+  CONTROL "Artículo", 202, "Static", WS_GROUP, 6, 78, 38, 8
 }
 
