--- a/resource/Rptapolo.rc
+++ b/resource/Rptapolo.rc
@@ -19563,3 +19563,13 @@ FONT 8, "MS Sans Serif"
   CONTROL "", -1, "Static", SS_ETCHEDHORZ, 5, 39, 269, 2
 }
 
+LANGUAGE LANG_SPANISH,SUBLANG_SPANISH_MODERN
+
+DBINFO DIALOG DISCARDABLE 44, 80, 222, 296
+STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|WS_CAPTION|WS_SYSMENU|WS_VISIBLE
+CAPTION "Stocks"
+FONT 8, "MS Sans Serif"
+{
+  CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 169, 279, 50, 14
+  CONTROL "", 100, "SysTreeView32", TVS_HASBUTTONS|TVS_HASLINES|TVS_LINESATROOT|WS_BORDER|WS_TABSTOP, 3, 4, 216, 270
+}
