--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -8644,24 +8644,43 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 100, "TXBrowse", WS_TABSTOP|0x00300000, 6, 6, 369, 187
 }
 
-IMPREMCLI DIALOG DISCARDABLE 43, -347, 194, 116
+IMPREMCLI DIALOG DISCARDABLE 43, -347, 271, 234
 STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|WS_CAPTION|WS_SYSMENU|WS_VISIBLE
 CAPTION "Importar de recibos a clientes"
 FONT 8, "MS Sans Serif"
 {
-  CONTROL "", 100, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 50, 14, 60, 12
-  CONTROL "", 110, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 50, 27, 60, 12
-  CONTROL "", 120, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 50, 54, 60, 12
-  CONTROL "", 130, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 50, 67, 60, 12
-  CONTROL "&Aceptar [F5]", IDOK, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 85, 98, 50, 14
-  CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 140, 98, 50, 14
-  CONTROL "Fecha expedición", -1, "Button", BS_GROUPBOX|WS_TABSTOP, 2, 3, 188, 38
+  CONTROL "", 100, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 50, 14, 70, 12
+  CONTROL "", 110, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 50, 27, 70, 12
+  CONTROL "", 120, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 49, 55, 70, 12
+  CONTROL "", 130, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 49, 68, 70, 12
+  CONTROL "", 150, "Edit", WS_BORDER|WS_TABSTOP, 49, 134, 70, 12
+  CONTROL "", 151, "Edit", WS_BORDER|WS_TABSTOP, 121, 134, 138, 12
+  CONTROL "", 160, "Edit", WS_BORDER|WS_TABSTOP, 49, 146, 70, 12
+  CONTROL "", 161, "Edit", WS_BORDER|WS_TABSTOP, 121, 146, 138, 12
+  CONTROL "", 170, "Edit", WS_BORDER|WS_TABSTOP, 49, 175, 70, 12
+  CONTROL "", 171, "Edit", WS_BORDER|WS_TABSTOP, 121, 175, 138, 12
+  CONTROL "", 180, "Edit", WS_BORDER|WS_TABSTOP, 49, 187, 70, 12
+  CONTROL "", 181, "Edit", WS_BORDER|WS_TABSTOP, 121, 187, 138, 12
+  CONTROL "&Aceptar [F5]", IDOK, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 162, 217, 50, 14
+  CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 217, 217, 50, 14
+  CONTROL "Fecha expedición", -1, "Button", BS_GROUPBOX|WS_TABSTOP, 2, 3, 264, 38
   CONTROL "Desde", -1, "Static", WS_GROUP, 7, 17, 39, 8
   CONTROL "Hasta", -1, "Static", WS_GROUP, 7, 30, 37, 8
-  CONTROL "msctls_progress32", 140, "msctls_progress32", WS_BORDER, 2, 87, 188, 8
-  CONTROL "Fecha vencimiento", -1, "Button", BS_GROUPBOX|WS_TABSTOP, 2, 43, 188, 38
-  CONTROL "Desde", -1, "Static", WS_GROUP, 7, 57, 39, 8
-  CONTROL "Hasta", -1, "Static", WS_GROUP, 7, 70, 37, 8
+  CONTROL "", 140, "msctls_progress32", WS_BORDER, 3, 207, 264, 5
+  CONTROL "Fecha vencimiento", -1, "Button", BS_GROUPBOX|WS_TABSTOP, 1, 44, 264, 38
+  CONTROL "Desde", -1, "Static", WS_GROUP, 6, 58, 39, 8
+  CONTROL "Hasta", -1, "Static", WS_GROUP, 6, 71, 37, 8
+  CONTROL "Desde", -1, "Static", WS_GROUP, 6, 138, 30, 8
+  CONTROL "Hasta", -1, "Static", WS_GROUP, 6, 150, 30, 8
+  CONTROL "Desde", -1, "Static", WS_GROUP, 6, 178, 30, 8
+  CONTROL "Hasta", -1, "Static", WS_GROUP, 6, 190, 30, 8
+  CONTROL "Clientes", -1, "Button", BS_GROUPBOX|WS_TABSTOP, 1, 124, 264, 39
+  CONTROL "Forma de pago", -1, "Button", BS_GROUPBOX|WS_TABSTOP, 1, 164, 264, 39
+  CONTROL "", 190, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 49, 94, 46, 12
+  CONTROL "", 200, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 49, 107, 46, 12
+  CONTROL "Serie facturación", -1, "Button", BS_GROUPBOX|WS_TABSTOP, 1, 83, 264, 38
+  CONTROL "Desde", -1, "Static", WS_GROUP, 6, 97, 39, 8
+  CONTROL "Hasta", -1, "Static", WS_GROUP, 6, 110, 37, 8
 }
 
 LANGUAGE LANG_ENGLISH,SUBLANG_ENGLISH_US
@@ -16847,28 +16866,24 @@ RECIBOS_3 DIALOG DISCARDABLE 82, 27, 332, 236
 STYLE WS_CHILD|WS_VISIBLE
 FONT 8, "MS Sans Serif"
 {
-  CONTROL "", 250, "Edit", WS_BORDER|WS_TABSTOP, 108, 39, 70, 12
-  CONTROL "", 251, "Edit", WS_BORDER|WS_TABSTOP, 180, 39, 144, 12
-  CONTROL "Contabilizado", 230, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 51, 67, 55, 10
-  CONTROL "", 240, "Edit", WS_BORDER|WS_TABSTOP, 108, 79, 70, 12
-  CONTROL "", 241, "Edit", WS_BORDER|WS_TABSTOP, 180, 79, 144, 12
-  CONTROL "", 270, "Edit", WS_BORDER|WS_TABSTOP, 108, 93, 70, 12
-  CONTROL "", 271, "Edit", WS_BORDER|WS_TABSTOP, 180, 93, 144, 12
-  CONTROL "A la espera de documentación", 165, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 50, 124, 109, 10
-  CONTROL "Impreso", 160, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 50, 137, 38, 10
-  CONTROL "", 161, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 108, 137, 60, 12
-  CONTROL "", 162, "Edit", WS_BORDER|WS_TABSTOP, 171, 137, 40, 12
-  CONTROL "", 280, "Edit", WS_BORDER|WS_TABSTOP, 108, 164, 70, 12
-  CONTROL "", 281, "Edit", WS_BORDER|WS_TABSTOP, 180, 164, 144, 12
-  CONTROL "Cuenta de remesa", -1, "Button", BS_GROUPBOX, 44, 29, 285, 25
-  CONTROL "Subcuenta", -1, "Static", WS_GROUP, 50, 82, 43, 8
-  CONTROL "Contabilidad", -1, "Button", BS_GROUPBOX, 44, 56, 285, 55
-  CONTROL "Cta. remesa", -1, "Static", WS_GROUP, 50, 42, 43, 8
-  CONTROL "Subcta. gastos", -1, "Static", WS_GROUP, 50, 96, 55, 8
-  CONTROL "Propiedades", -1, "Button", BS_GROUPBOX, 44, 112, 285, 41
+  CONTROL "Contabilizado", 230, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 51, 40, 55, 10
+  CONTROL "", 240, "Edit", WS_BORDER|WS_TABSTOP, 108, 52, 70, 12
+  CONTROL "", 241, "Edit", WS_BORDER|WS_TABSTOP, 180, 52, 144, 12
+  CONTROL "", 270, "Edit", WS_BORDER|WS_TABSTOP, 108, 66, 70, 12
+  CONTROL "", 271, "Edit", WS_BORDER|WS_TABSTOP, 180, 66, 144, 12
+  CONTROL "A la espera de documentación", 165, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 50, 97, 109, 10
+  CONTROL "Impreso", 160, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 50, 110, 38, 10
+  CONTROL "", 161, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 108, 110, 60, 12
+  CONTROL "", 162, "Edit", WS_BORDER|WS_TABSTOP, 171, 110, 40, 12
+  CONTROL "", 280, "Edit", WS_BORDER|WS_TABSTOP, 108, 137, 70, 12
+  CONTROL "", 281, "Edit", WS_BORDER|WS_TABSTOP, 180, 137, 144, 12
+  CONTROL "Subcuenta", -1, "Static", WS_GROUP, 50, 55, 43, 8
+  CONTROL "Contabilidad", -1, "Button", BS_GROUPBOX, 44, 29, 285, 55
+  CONTROL "Subcta. gastos", -1, "Static", WS_GROUP, 50, 69, 55, 8
+  CONTROL "Propiedades", -1, "Button", BS_GROUPBOX, 44, 85, 285, 41
   CONTROL "", 500, "Static", SS_BITMAP|SS_CENTERIMAGE, 4, 4, 34, 30
-  CONTROL "Centro de coste", -1, "Button", BS_GROUPBOX, 44, 154, 285, 25
-  CONTROL "Ctr. Coste", -1, "Static", WS_GROUP, 50, 167, 43, 8
+  CONTROL "Centro de coste", -1, "Button", BS_GROUPBOX, 44, 127, 285, 25
+  CONTROL "Ctr. Coste", -1, "Static", WS_GROUP, 50, 140, 43, 8
 }
 
 RECIBOS_4 DIALOG DISCARDABLE 82, 27, 333, 272
@@ -16925,16 +16940,20 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 220, "Edit", WS_BORDER|WS_TABSTOP, 169, 98, 34, 12
   CONTROL "", 230, "Edit", WS_BORDER|WS_TABSTOP, 205, 98, 20, 12
   CONTROL "", 240, "Edit", WS_BORDER|WS_TABSTOP, 227, 98, 94, 12
-  CONTROL "Recibo remesado", 300, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 50, 124, 70, 10
+  CONTROL "Recibo remesado", 300, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 50, 150, 70, 10
   CONTROL "Banco", 4005, "Static", WS_GROUP, 50, 86, 23, 8
-  CONTROL "", 310, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 89, 137, 40, 12
+  CONTROL "", 310, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 89, 163, 40, 12
   CONTROL "IBAN", 4006, "Static", WS_GROUP, 50, 101, 27, 8
-  CONTROL "", 320, "Edit", ES_MULTILINE|WS_BORDER|WS_TABSTOP, 131, 137, 18, 12
+  CONTROL "", 320, "Edit", ES_MULTILINE|WS_BORDER|WS_TABSTOP, 131, 163, 18, 12
   CONTROL "Entidad bancaria de la empresa", -1, "Button", BS_GROUPBOX, 44, 29, 285, 41
   CONTROL "Entidad bancaria del cliente", -1, "Button", BS_GROUPBOX, 44, 72, 285, 43
-  CONTROL "", -1, "Button", BS_GROUPBOX, 44, 117, 285, 35
+  CONTROL "", -1, "Button", BS_GROUPBOX, 44, 143, 285, 35
   CONTROL "", 500, "Static", SS_BITMAP|SS_CENTERIMAGE, 4, 3, 34, 30
-  CONTROL "Remesa", -1, "Static", WS_GROUP, 50, 140, 34, 8
+  CONTROL "Remesa", -1, "Static", WS_GROUP, 50, 166, 34, 8
+  CONTROL "", 290, "Edit", WS_BORDER|WS_TABSTOP, 108, 128, 70, 12
+  CONTROL "", 291, "Edit", WS_BORDER|WS_TABSTOP, 180, 128, 144, 12
+  CONTROL "Cuenta de remesa", -1, "Button", BS_GROUPBOX, 44, 118, 285, 25
+  CONTROL "Cta. remesa", -1, "Static", WS_GROUP, 50, 131, 43, 8
 }
 
 RECIBOSPROVEEDORESBANCOS DIALOG DISCARDABLE 82, 27, 333, 272
