--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -4559,37 +4559,6 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 170, "SysTreeView32", TVS_HASBUTTONS|TVS_HASLINES|TVS_LINESATROOT|TVS_TRACKSELECT|TVS_FULLROWSELECT|WS_BORDER|WS_TABSTOP, 2, 104, 308, 180
 }
 
-CONSERREC DIALOG DISCARDABLE 22, 50, 215, 298
-STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|WS_CAPTION|WS_SYSMENU|WS_VISIBLE
-CAPTION "Contabilizar recibos"
-FONT 8, "MS Sans Serif"
-{
-  CONTROL "", 80, "ComboBox", WS_BORDER|CBS_DROPDOWN|WS_VSCROLL|WS_TABSTOP, 75, 3, 87, 40
-  CONTROL "Cobrados y no contabilizados", 90, "Button", BS_AUTORADIOBUTTON, 8, 20, 105, 10
-  CONTROL "Series", 91, "Button", BS_AUTORADIOBUTTON, 8, 34, 33, 10
-  CONTROL "", 100, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 75, 47, 28, 12
-  CONTROL "", 120, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 106, 47, 55, 12
-  CONTROL "", 140, "Edit", WS_BORDER|WS_TABSTOP, 163, 47, 18, 12
-  CONTROL "", 160, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 189, 47, 18, 12
-  CONTROL "", 110, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 75, 60, 28, 12
-  CONTROL "", 130, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 106, 60, 55, 12
-  CONTROL "", 150, "Edit", WS_BORDER|WS_TABSTOP, 163, 60, 18, 12
-  CONTROL "", 170, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 189, 60, 18, 12
-  CONTROL "Recibo inicial", -1, "Static", WS_GROUP, 19, 50, 47, 8
-  CONTROL "Recibo final", -1, "Static", WS_GROUP, 19, 63, 43, 8
-  CONTROL "-", -1, "Static", WS_GROUP, 184, 48, 8, 8
-  CONTROL "-", -1, "Static", WS_GROUP, 184, 61, 8, 8
-  CONTROL "Simular resultados", 190, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 8, 77, 200, 10
-  CONTROL "&Aceptar [F5]", IDOK, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 105, 96, 50, 14
-  CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 159, 96, 50, 14
-  CONTROL "msctls_progress32", 200, "msctls_progress32", 0x00000000, 2, 114, 208, 8
-  CONTROL "", 180, "SysTreeView32", TVS_HASBUTTONS|TVS_HASLINES|TVS_LINESATROOT|TVS_TRACKSELECT|TVS_FULLROWSELECT|WS_BORDER|WS_TABSTOP, 2, 122, 208, 174
-  CONTROL "Tipo", -1, "Static", WS_GROUP, 8, 6, 46, 8
-  CONTROL "", -1, "Static", SS_ETCHEDHORZ, 2, 91, 208, 1
-  CONTROL "", 101, "TBtnBmp", 0x00000000, 6, 48, 12, 11
-  CONTROL "", 111, "TBtnBmp", 0x00000000, 6, 61, 12, 11
-}
-
 CONSULTA DIALOG DISCARDABLE 28, 15, 492, 150
 STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|WS_CAPTION|WS_SYSMENU|WS_VISIBLE
 CAPTION "Filtros"
@@ -20930,5 +20899,34 @@ FONT 8, "MS Sans Serif"
   CONTROL "Cuenta", -1, "Static", WS_GROUP, 6, 188, 27, 8
   CONTROL "Días ultimo plazos", -1, "Static", WS_GROUP, 150, 145, 61, 8
   CONTROL "", 430, "Edit", NOT WS_VISIBLE|ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 236, 309, 42, 11
+}
+
+CONTABILIZA_RECIBOS_CLIENTES DIALOG DISCARDABLE 22, 50, 216, 308
+STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|WS_CAPTION|WS_SYSMENU|WS_VISIBLE
+CAPTION "Contabilizar recibos"
+FONT 8, "MS Sans Serif"
+{
+  CONTROL "", 80, "ComboBox", WS_BORDER|CBS_DROPDOWN|WS_VSCROLL|WS_TABSTOP, 75, 3, 87, 40
+  CONTROL "Cobrados y no contabilizados", 91, "Button", BS_AUTORADIOBUTTON, 6, 33, 105, 10
+  CONTROL "Series", 92, "Button", BS_AUTORADIOBUTTON, 6, 46, 33, 10
+  CONTROL "", 100, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 75, 57, 28, 11
+  CONTROL "", 120, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 107, 57, 55, 11
+  CONTROL "", 140, "Edit", WS_BORDER|WS_TABSTOP, 165, 57, 18, 11
+  CONTROL "", 160, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 193, 57, 18, 11
+  CONTROL "", 110, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 75, 70, 28, 11
+  CONTROL "", 130, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 107, 70, 55, 11
+  CONTROL "", 150, "Edit", WS_BORDER|WS_TABSTOP, 165, 70, 18, 11
+  CONTROL "", 170, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 193, 70, 18, 11
+  CONTROL "Recibo inicial", -1, "Static", WS_GROUP, 19, 60, 47, 8
+  CONTROL "Recibo final", 4001, "Static", WS_GROUP, 19, 73, 43, 8
+  CONTROL "-", 4002, "Static", WS_GROUP, 186, 58, 7, 8
+  CONTROL "-", 4003, "Static", WS_GROUP, 186, 71, 7, 8
+  CONTROL "Simular resultados", 190, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 6, 89, 70, 10
+  CONTROL "&Aceptar [F5]", IDOK, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 108, 106, 50, 14
+  CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 162, 106, 50, 14
+  CONTROL "Tipo", 4004, "Static", WS_GROUP, 6, 6, 46, 8
+  CONTROL "Seleccionados", 90, "Button", BS_AUTORADIOBUTTON, 6, 20, 60, 10
+  CONTROL "", 200, "msctls_progress32", 0x00000000, 6, 124, 206, 4
+  CONTROL "", 180, "SysTreeView32", TVS_HASBUTTONS|TVS_HASLINES|TVS_LINESATROOT|TVS_TRACKSELECT|TVS_FULLROWSELECT|WS_BORDER|WS_TABSTOP, 6, 131, 206, 174
 }
 
