--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -8557,7 +8557,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 100, "TXBrowse", WS_TABSTOP|0x00300000, 6, 6, 369, 187
 }
 
-IMPREMCLI DIALOG DISCARDABLE 43, -347, 271, 234
+IMPREMCLI DIALOG DISCARDABLE 43, -347, 271, 279
 STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|WS_CAPTION|WS_SYSMENU|WS_VISIBLE
 CAPTION "Importar de recibos a clientes"
 FONT 8, "MS Sans Serif"
@@ -8566,6 +8566,12 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 110, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 50, 27, 70, 12
   CONTROL "", 120, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 49, 55, 70, 12
   CONTROL "", 130, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 49, 68, 70, 12
+  CONTROL "", 190, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 49, 93, 34, 12
+  CONTROL "", 210, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 85, 93, 70, 12
+  CONTROL "", 230, "Edit", WS_BORDER|WS_TABSTOP, 157, 93, 22, 12
+  CONTROL "", 200, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 49, 106, 34, 12
+  CONTROL "", 220, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 85, 106, 70, 12
+  CONTROL "", 240, "Edit", WS_BORDER|WS_TABSTOP, 157, 106, 22, 12
   CONTROL "", 150, "Edit", WS_BORDER|WS_TABSTOP, 49, 134, 70, 12
   CONTROL "", 151, "Edit", WS_BORDER|WS_TABSTOP, 121, 134, 138, 12
   CONTROL "", 160, "Edit", WS_BORDER|WS_TABSTOP, 49, 146, 70, 12
@@ -8574,12 +8580,14 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 171, "Edit", WS_BORDER|WS_TABSTOP, 121, 175, 138, 12
   CONTROL "", 180, "Edit", WS_BORDER|WS_TABSTOP, 49, 187, 70, 12
   CONTROL "", 181, "Edit", WS_BORDER|WS_TABSTOP, 121, 187, 138, 12
-  CONTROL "&Aceptar [F5]", IDOK, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 162, 217, 50, 14
-  CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 217, 217, 50, 14
+  CONTROL "No incluir recibos negativos o con importe cero", 250, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 6, 222, 162, 10
+  CONTROL "No incluir recibos sin cuenta bancaria", 260, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 6, 233, 131, 10
+  CONTROL "&Aceptar [F5]", IDOK, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 162, 260, 50, 14
+  CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 217, 260, 50, 14
   CONTROL "Fecha expedición", -1, "Button", BS_GROUPBOX|WS_TABSTOP, 2, 3, 264, 38
   CONTROL "Desde", -1, "Static", WS_GROUP, 7, 17, 39, 8
   CONTROL "Hasta", -1, "Static", WS_GROUP, 7, 30, 37, 8
-  CONTROL "", 140, "msctls_progress32", WS_BORDER, 3, 207, 264, 5
+  CONTROL "", 140, "msctls_progress32", WS_BORDER, 3, 250, 264, 5
   CONTROL "Fecha vencimiento", -1, "Button", BS_GROUPBOX|WS_TABSTOP, 1, 44, 264, 38
   CONTROL "Desde", -1, "Static", WS_GROUP, 6, 58, 39, 8
   CONTROL "Hasta", -1, "Static", WS_GROUP, 6, 71, 37, 8
@@ -8589,11 +8597,10 @@ FONT 8, "MS Sans Serif"
   CONTROL "Hasta", -1, "Static", WS_GROUP, 6, 190, 30, 8
   CONTROL "Clientes", -1, "Button", BS_GROUPBOX|WS_TABSTOP, 1, 124, 264, 39
   CONTROL "Forma de pago", -1, "Button", BS_GROUPBOX|WS_TABSTOP, 1, 164, 264, 39
-  CONTROL "", 190, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 49, 94, 46, 12
-  CONTROL "", 200, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 49, 107, 46, 12
   CONTROL "Serie facturación", -1, "Button", BS_GROUPBOX|WS_TABSTOP, 1, 83, 264, 38
   CONTROL "Desde", -1, "Static", WS_GROUP, 6, 97, 39, 8
   CONTROL "Hasta", -1, "Static", WS_GROUP, 6, 110, 37, 8
+  CONTROL "Opciones", -1, "Button", BS_GROUPBOX|WS_TABSTOP, 1, 206, 264, 41
 }
 
 LANGUAGE LANG_ENGLISH,SUBLANG_ENGLISH_US
@@ -17079,9 +17086,8 @@ FONT 8, "MS Sans Serif"
   CONTROL "&Eliminar [F4]", 502, "Button", WS_TABSTOP, 156, 96, 50, 14
   CONTROL "&Importar", 503, "Button", WS_TABSTOP, 210, 96, 50, 14
   CONTROL "", 150, "TXBrowse", WS_TABSTOP|0x00300000, 50, 112, 557, 210
-  CONTROL "&Aceptar [F5]", 511, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 456, 331, 50, 14
-  CONTROL "&Cancelar", 510, "Button", WS_TABSTOP, 511, 331, 50, 14
-  CONTROL "A&yuda", 559, "Button", WS_TABSTOP, 566, 331, 50, 14
+  CONTROL "&Aceptar [F5]", 511, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 502, 331, 50, 14
+  CONTROL "&Cancelar", 510, "Button", WS_TABSTOP, 557, 331, 50, 14
   CONTROL "TBitmap", 141, "TBitMap", 0x00800000, 412, 52, 16, 11
   CONTROL "Recibos", -1, "Button", BS_GROUPBOX|WS_TABSTOP, 44, 83, 570, 244
   CONTROL "Cuenta", -1, "Static", WS_GROUP, 295, 42, 44, 8
