--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -14502,23 +14502,24 @@ FONT 8, "MS Sans Serif"
   CONTROL "Almacén", -1, "Static", WS_GROUP, 8, 14, 58, 8
 }
 
-MODELO19 DIALOG DISCARDABLE 61, 22, 355, 153
+MODELO19 DIALOG DISCARDABLE 61, 22, 355, 346
 STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|WS_CAPTION|WS_SYSMENU|WS_VISIBLE
 CAPTION "Remesa de recibos a soporte magnéticos según norma 19"
 FONT 8, "MS Sans Serif"
 {
   CONTROL "Utilizar fecha de vencimiento del recibo", 140, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 50, 40, 140, 12
   CONTROL "", 120, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 133, 54, 60, 12
-  CONTROL "Agrupar recibos por clientes", 100, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 50, 68, 107, 12
+  CONTROL "Agrupar recibos por clientes", 100, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 50, 68, 107, 11
   CONTROL "Usar formato SEPA", 110, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 50, 82, 107, 12
   CONTROL "", 130, "Edit", WS_BORDER|WS_TABSTOP, 133, 111, 213, 12
-  CONTROL "&Aceptar [F5]", 550, "Button", WS_TABSTOP, 245, 131, 50, 15
-  CONTROL "&Cancelar", 551, "Button", WS_TABSTOP, 300, 131, 50, 15
-  CONTROL "Fichero", 113, "Button", BS_GROUPBOX, 44, 100, 306, 26
+  CONTROL "&Aceptar [F5]", 550, "Button", WS_TABSTOP, 245, 132, 50, 15
+  CONTROL "&Cancelar", 551, "Button", WS_TABSTOP, 300, 132, 50, 15
+  CONTROL "Fichero", 113, "Button", BS_GROUPBOX, 44, 100, 306, 29
   CONTROL "Ruta del fichero ", -1, "Static", WS_GROUP, 50, 112, 79, 10
   CONTROL "Fecha cargo en cuentas ", -1, "Static", WS_GROUP, 50, 56, 82, 10
   CONTROL "Propiedades", -1, "Button", BS_GROUPBOX, 44, 29, 306, 69
   CONTROL "", 500, "Static", SS_BITMAP|SS_CENTERIMAGE, 4, 3, 34, 30
+  CONTROL "", 150, "SysTreeView32", TVS_HASBUTTONS|TVS_HASLINES|TVS_LINESATROOT|WS_BORDER|WS_TABSTOP, 44, 151, 306, 191
 }
 
 MOVILGES DIALOG DISCARDABLE 278, 96, 290, 265
