--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -14508,18 +14508,18 @@ CAPTION "Remesa de recibos a soporte magnéticos según norma 19"
 FONT 8, "MS Sans Serif"
 {
   CONTROL "Utilizar fecha de vencimiento del recibo", 140, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 50, 40, 140, 10
-  CONTROL "", 120, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 133, 54, 60, 12
+  CONTROL "", 120, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 133, 53, 60, 12
   CONTROL "Agrupar recibos por clientes", 100, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 50, 68, 101, 11
   CONTROL "Usar formato SEPA", 110, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 50, 82, 74, 10
   CONTROL "", 130, "Edit", WS_BORDER|WS_TABSTOP, 50, 127, 296, 12
   CONTROL "&Aceptar [F5]", 550, "Button", WS_TABSTOP, 245, 148, 50, 15
   CONTROL "&Cancelar", 551, "Button", WS_TABSTOP, 300, 148, 50, 15
   CONTROL "Fichero", 113, "Button", BS_GROUPBOX, 44, 116, 306, 29
-  CONTROL "Fecha cargo en cuentas ", -1, "Static", WS_GROUP, 50, 56, 82, 10
+  CONTROL "Fecha cargo en cuentas ", -1, "Static", WS_GROUP, 50, 55, 82, 10
   CONTROL "Propiedades", -1, "Button", BS_GROUPBOX, 44, 29, 306, 84
   CONTROL "", 500, "Static", SS_BITMAP|SS_CENTERIMAGE, 4, 3, 34, 30
   CONTROL "", 150, "SysTreeView32", TVS_HASBUTTONS|TVS_HASLINES|TVS_LINESATROOT|WS_BORDER|WS_TABSTOP, 44, 167, 306, 191
-  CONTROL "", 160, "ComboBox", WS_BORDER|CBS_DROPDOWN|CBS_SORT|WS_VSCROLL|WS_TABSTOP, 133, 96, 60, 62
+  CONTROL "", 160, "ComboBox", WS_BORDER|CBS_DROPDOWN|WS_VSCROLL|WS_TABSTOP, 133, 96, 60, 62
   CONTROL "Esquema", -1, "Static", WS_GROUP, 49, 98, 35, 10
 }
 
