--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -5436,17 +5436,17 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 140, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 127, 164, 297, 12
   CONTROL "", 141, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 127, 177, 297, 12
   CONTROL "", 142, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 127, 190, 99, 12
-  CONTROL "", 220, "ComboBox", WS_BORDER|CBS_DROPDOWN|WS_VSCROLL|WS_TABSTOP, 383, 205, 41, 15
+  CONTROL "", 220, "ComboBox", WS_BORDER|CBS_DROPDOWN|WS_VSCROLL|WS_TABSTOP, 379, 205, 45, 15
   CONTROL "Conexion en tiempo real con la web", 400, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 48, 220, 129, 10
   CONTROL "Formato clientes: apellidos, nombre", 420, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 234, 220, 125, 10
   CONTROL "Ocultar botón de exportación", 430, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 48, 207, 105, 10
-  CONTROL "", 210, "Edit", ES_NUMBER|ES_AUTOHSCROLL|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 299, 190, 30, 12
-  CONTROL "", 320, "Edit", ES_NUMBER|ES_AUTOHSCROLL|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 299, 204, 30, 12
-  CONTROL "", 150, "TBtnBmp", 0x00000000, 412, 190, 12, 13
+  CONTROL "", 210, "Edit", ES_NUMBER|ES_AUTOHSCROLL|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 304, 190, 30, 12
+  CONTROL "", 320, "Edit", ES_NUMBER|ES_AUTOHSCROLL|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 304, 204, 30, 12
+  CONTROL "", 150, "TBtnBmp", 0x00000000, 412, 190, 12, 12
   CONTROL "", 250, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 127, 245, 207, 12
-  CONTROL "", 260, "Edit", ES_RIGHT|ES_NUMBER|ES_AUTOHSCROLL|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 380, 245, 44, 12
+  CONTROL "", 260, "Edit", ES_RIGHT|ES_NUMBER|ES_AUTOHSCROLL|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 380, 259, 44, 12
   CONTROL "", 230, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 127, 259, 207, 12
-  CONTROL "Envío pasivo", 270, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 335, 260, 72, 10
+  CONTROL "Envío pasivo", 270, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 337, 275, 72, 10
   CONTROL "", 240, "Edit", ES_AUTOHSCROLL|ES_PASSWORD|WS_BORDER|WS_TABSTOP, 127, 273, 207, 12
   CONTROL "", 200, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 127, 287, 297, 12
   CONTROL "", 300, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 127, 315, 297, 12
@@ -5464,7 +5464,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "Puerto", -1, "Static", WS_GROUP, 337, 43, 26, 8
   CONTROL "Contraseña", -1, "Static", WS_GROUP, 49, 70, 41, 8
   CONTROL "Serie pedidos", -1, "Static", WS_GROUP, 234, 194, 45, 8
-  CONTROL "Latencia", -1, "Static", WS_GROUP, 338, 209, 33, 8
+  CONTROL "Latencia", -1, "Static", WS_GROUP, 338, 208, 33, 8
   CONTROL "Intercambio electrónico de datos EDI", -1, "Button", BS_GROUPBOX, 43, 303, 384, 40
   CONTROL "Directorio exportación", -1, "Static", WS_GROUP, 48, 318, 74, 8
   CONTROL "Código EDI [EAN]", -1, "Static", WS_GROUP, 48, 331, 62, 8
@@ -5473,7 +5473,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "Contraseña FTP", -1, "Static", WS_GROUP, 48, 275, 51, 8
   CONTROL "Directorio imágenes", -1, "Static", WS_GROUP, 48, 290, 70, 8
   CONTROL "Servidor", -1, "Static", WS_GROUP, 48, 248, 31, 8
-  CONTROL "Puerto", -1, "Static", WS_GROUP, 335, 248, 26, 8
+  CONTROL "Puerto", -1, "Static", WS_GROUP, 337, 263, 26, 8
   CONTROL "", 500, "Static", SS_BITMAP|SS_CENTERIMAGE, 4, 3, 34, 30, WS_EX_TRANSPARENT
   CONTROL "Configuraciones para el envio de email y para el enlace de la aplicación con una página web", -1, "Static", SS_LEFTNOWORDWRAP, 44, 3, 384, 8
   CONTROL "Cookie key", -1, "Static", WS_GROUP, 48, 181, 51, 8
@@ -5481,6 +5481,8 @@ FONT 8, "MS Sans Serif"
   CONTROL "Prefijo bases de datos", -1, "Static", WS_GROUP, 48, 196, 72, 8
   CONTROL "Enviar copia oculta", -1, "Static", WS_GROUP, 49, 97, 66, 8
   CONTROL "Serie presupuesto", -1, "Static", WS_GROUP, 234, 208, 63, 8
+  CONTROL "", 255, "TBtnBmp", 0x00000000, 412, 245, 12, 12
+  CONTROL "Probar conexión", 4002, "Static", WS_GROUP, 337, 249, 57, 8
 }
 
 EMPRESA_1 DIALOG DISCARDABLE 31, 12, 397, 287
