--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -20856,7 +20856,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "Artículo", 202, "Static", WS_GROUP, 6, 78, 38, 8
 }
 
-FORMAS_PAGO DIALOG DISCARDABLE 162, 101, 287, 349
+FORMAS_PAGO DIALOG DISCARDABLE 162, 101, 287, 382
 STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|WS_CAPTION|WS_SYSMENU|WS_VISIBLE
 CAPTION "Formas de pago"
 FONT 8, "MS Sans Serif"
@@ -20890,11 +20890,11 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 300, "Edit", WS_BORDER|WS_TABSTOP, 66, 225, 70, 11
   CONTROL "", 301, "Edit", WS_BORDER|WS_TABSTOP, 137, 225, 143, 11
   CONTROL "", 425, "ComboBox", WS_BORDER|CBS_DROPDOWN|CBS_DISABLENOSCROLL|WS_VSCROLL|WS_TABSTOP, 66, 253, 212, 101
-  CONTROL "Incluir en terminal punto de venta", 400, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 6, 283, 118, 10
-  CONTROL "", 410, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|CBS_OWNERDRAWFIXED|CBS_DISABLENOSCROLL|WS_VSCROLL|WS_TABSTOP, 66, 295, 212, 101
-  CONTROL "", 420, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 66, 309, 40, 11
-  CONTROL "&Aceptar [F5]", IDOK, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 180, 331, 50, 14
-  CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 235, 331, 50, 14
+  CONTROL "Incluir en terminal punto de venta", 400, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 6, 316, 118, 10
+  CONTROL "", 410, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|CBS_OWNERDRAWFIXED|CBS_DISABLENOSCROLL|WS_VSCROLL|WS_TABSTOP, 66, 328, 212, 101
+  CONTROL "", 420, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 66, 342, 40, 11
+  CONTROL "&Aceptar [F5]", IDOK, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 180, 364, 50, 14
+  CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 235, 364, 50, 14
   CONTROL "Emitir como ", -1, "Button", BS_GROUPBOX, 2, 95, 140, 64
   CONTROL "Aplazamientos", -1, "Button", BS_GROUPBOX, 144, 95, 140, 64
   CONTROL "Tipo de pago", -1, "Button", BS_GROUPBOX, 2, 30, 282, 62
@@ -20907,9 +20907,9 @@ FONT 8, "MS Sans Serif"
   CONTROL "Nº de plazos", -1, "Static", WS_GROUP, 150, 109, 45, 8
   CONTROL "Días primer plazo", -1, "Static", WS_GROUP, 150, 121, 60, 8
   CONTROL "Días entre plazos", -1, "Static", WS_GROUP, 150, 133, 61, 8
-  CONTROL "Terminal punto de venta", -1, "Button", BS_GROUPBOX, 2, 272, 282, 54
-  CONTROL "Imagen", -1, "Static", WS_GROUP, 6, 298, 29, 8
-  CONTROL "Posición", -1, "Static", WS_GROUP, 6, 312, 32, 8
+  CONTROL "Terminal punto de venta", -1, "Button", BS_GROUPBOX, 2, 305, 282, 54
+  CONTROL "Imagen", -1, "Static", WS_GROUP, 6, 331, 29, 8
+  CONTROL "Posición", -1, "Static", WS_GROUP, 6, 345, 32, 8
   CONTROL "Código de pago para generación de factura electónica", -1, "Button", BS_GROUPBOX, 2, 242, 282, 28
   CONTROL "Entrega inicial %", -1, "Static", WS_GROUP, 150, 43, 57, 8
   CONTROL "Descuento %", -1, "Static", WS_GROUP, 150, 55, 49, 8
@@ -20917,7 +20917,10 @@ FONT 8, "MS Sans Serif"
   CONTROL "Banco", -1, "Static", WS_GROUP, 6, 175, 23, 8
   CONTROL "Cuenta", -1, "Static", WS_GROUP, 6, 188, 27, 8
   CONTROL "Días ultimo plazos", -1, "Static", WS_GROUP, 150, 145, 61, 8
-  CONTROL "", 430, "Edit", NOT WS_VISIBLE|ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 236, 309, 42, 11
+  CONTROL "", 430, "Edit", NOT WS_VISIBLE|ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 236, 342, 42, 11
+  CONTROL "Código para plataforma EDI", -1, "Button", BS_GROUPBOX, 2, 274, 282, 28
+  CONTROL "Código EDI", -1, "Static", WS_GROUP, 5, 290, 45, 8
+  CONTROL "", 360, "Edit", WS_BORDER|WS_TABSTOP, 66, 287, 70, 11
 }
 
 CONTABILIZA_RECIBOS_CLIENTES DIALOG DISCARDABLE 22, 50, 216, 308
