--- a/resource/Gstimage11.rc
+++ b/resource/Gstimage11.rc
@@ -117,7 +117,7 @@ user_48_alpha BITMAP "..\\bmp\\user_48_alpha.bmp"
 users_48_alpha BITMAP "..\\bmp\\users_48_alpha.bmp"
 note_48_alpha BITMAP "..\\bmp\\note_48_alpha.bmp"
 clock BITMAP "..\\bmp\\clock.bmp"
-clock_16 BITMAP "..\\bmp\\clock_16.bmp"
+BCLOCK BITMAP "..\\bmp\\clock_16.bmp"
 clock_stop_16 BITMAP "..\\bmp\\clock_stop_16.bmp"
 clock_run_16 BITMAP "..\\bmp\\clock_run_16.bmp"
 clock_run BITMAP "..\\bmp\\clock_run.bmp"
