--- a/resource/Gstimage2.rc
+++ b/resource/Gstimage2.rc
@@ -306,6 +306,7 @@ SELSEND16 BITMAP "..\\bmp\\Nav_up_green_16.bmp"
 BSEL BITMAP "..\\bmp\\Check2_16.bmp"
 SEND BITMAP "..\\bmp\\Check2_16.bmp"
 BSTOP BITMAP "..\\bmp\\Forbidden_16.bmp"
+BCANCEL BITMAP "..\\bmp\\Cancel_16.bmp"
 LUPA BITMAP "..\\bmp\\Document_view_16.bmp"
 INFO BITMAP "..\\bmp\\Information_16.bmp"
 INFO_DELETE BITMAP "..\\bmp\\Information_Delete_16.bmp"
