--- a/resource/Gstimage2.rc
+++ b/resource/Gstimage2.rc
@@ -32,6 +32,7 @@ EMPTY_16 BITMAP "..\\bmp\\Empty_16.bmp"
 BELL_16 BITMAP "..\\bmp\\Bell_16.bmp"
 DATA_CONNECTION_16 BITMAP "..\\bmp\\data_connection_16.bmp"
 BALERT BITMAP "..\\bmp\\warning_16.bmp"
+Warning_16 BITMAP "..\\bmp\\warning_16.bmp"
 PDF BITMAP "..\\bmp\\Document_pdf_16.bmp"
 PDF_16 BITMAP "..\\bmp\\Document_pdf_16.bmp"
 FOLDER_32 BITMAP "..\\bmp\\Folder_32.bmp"
@@ -307,6 +308,8 @@ BSEL BITMAP "..\\bmp\\Check2_16.bmp"
 SEND BITMAP "..\\bmp\\Check2_16.bmp"
 BSTOP BITMAP "..\\bmp\\Forbidden_16.bmp"
 BCANCEL BITMAP "..\\bmp\\Cancel_16.bmp"
+Check2_16 BITMAP "..\\bmp\\Check2_16.bmp"
+Cancel_16 BITMAP "..\\bmp\\Cancel_16.bmp"
 LUPA BITMAP "..\\bmp\\Document_view_16.bmp"
 INFO BITMAP "..\\bmp\\Information_16.bmp"
 INFO_DELETE BITMAP "..\\bmp\\Information_Delete_16.bmp"
