--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -1170,91 +1170,83 @@ STYLE WS_CHILD|DS_3DLOOK|WS_VISIBLE
 FONT 8, "MS Sans Serif"
 {
   CONTROL "", 800, "Edit", WS_BORDER|WS_TABSTOP, 105, 46, 56, 11
-  CONTROL "", 801, "Edit", WS_BORDER|WS_TABSTOP, 163, 46, 221, 11
+  CONTROL "", 801, "Edit", WS_BORDER|WS_TABSTOP, 163, 46, 322, 11
   CONTROL "", 810, "Edit", WS_BORDER|WS_TABSTOP, 105, 58, 56, 11
-  CONTROL "", 811, "Edit", WS_BORDER|WS_TABSTOP, 163, 58, 221, 11
+  CONTROL "", 811, "Edit", WS_BORDER|WS_TABSTOP, 163, 58, 322, 11
   CONTROL "", 110, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 105, 86, 70, 11
-  CONTROL "", 111, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 105, 87, 70, 11
-  CONTROL "Codificación de proveedores", 510, "Button", WS_TABSTOP, 362, 84, 123, 14
-  CONTROL "", 610, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|WS_VSCROLL|WS_TABSTOP, 48, 118, 63, 40
-  CONTROL "Bloquear %", 150, "Button", BS_AUTOCHECKBOX|BS_LEFTTEXT|WS_TABSTOP, 119, 146, 49, 10
-  CONTROL "", 160, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 173, 144, 44, 11
-  CONTROL "", 165, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|WS_TABSTOP, 220, 144, 50, 33
-  CONTROL "", 620, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 281, 144, 68, 11
-  CONTROL "", 170, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 281, 144, 68, 11
-  CONTROL "", 680, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 362, 144, 68, 11
-  CONTROL "", 180, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 362, 144, 68, 11
-  CONTROL "Bloquear %", 190, "Button", BS_AUTOCHECKBOX|BS_LEFTTEXT|WS_TABSTOP, 119, 160, 49, 10
-  CONTROL "", 200, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 173, 158, 44, 11
-  CONTROL "", 205, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|WS_TABSTOP, 220, 158, 50, 33
-  CONTROL "", 630, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 281, 158, 68, 11
-  CONTROL "", 210, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 281, 158, 68, 11
-  CONTROL "", 690, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 362, 158, 68, 11
-  CONTROL "", 220, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 362, 158, 68, 11
-  CONTROL "Bloquear %", 230, "Button", BS_AUTOCHECKBOX|BS_LEFTTEXT|WS_TABSTOP, 119, 174, 49, 10
-  CONTROL "", 240, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 173, 172, 44, 11
-  CONTROL "", 245, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|WS_TABSTOP, 220, 172, 50, 33
-  CONTROL "", 640, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 281, 172, 68, 11
-  CONTROL "", 250, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 281, 172, 68, 11
-  CONTROL "", 700, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 362, 172, 68, 11
-  CONTROL "", 260, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 362, 172, 68, 11
-  CONTROL "Bloquear %", 270, "Button", BS_AUTOCHECKBOX|BS_LEFTTEXT|WS_TABSTOP, 119, 188, 49, 10
-  CONTROL "", 280, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 173, 186, 44, 11
-  CONTROL "", 285, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|WS_TABSTOP, 220, 186, 50, 33
-  CONTROL "", 650, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 281, 186, 68, 11
-  CONTROL "", 290, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 281, 186, 68, 11
-  CONTROL "", 710, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 362, 186, 68, 11
-  CONTROL "", 300, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 362, 186, 68, 11
-  CONTROL "Bloquear %", 310, "Button", BS_AUTOCHECKBOX|BS_LEFTTEXT|WS_TABSTOP, 119, 202, 49, 10
-  CONTROL "", 320, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 173, 200, 44, 11
-  CONTROL "", 325, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|WS_TABSTOP, 220, 200, 50, 33
-  CONTROL "", 660, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 281, 200, 68, 11
-  CONTROL "", 330, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 281, 200, 68, 11
-  CONTROL "", 720, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 362, 200, 68, 11
-  CONTROL "", 340, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 362, 200, 68, 11
-  CONTROL "Bloquear %", 350, "Button", BS_AUTOCHECKBOX|BS_LEFTTEXT|WS_TABSTOP, 119, 216, 49, 10
-  CONTROL "", 360, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 173, 214, 44, 11
-  CONTROL "", 365, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|WS_TABSTOP, 220, 214, 50, 33
-  CONTROL "", 670, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 281, 214, 68, 11
-  CONTROL "", 370, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 281, 214, 68, 11
-  CONTROL "", 730, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 362, 214, 68, 11
-  CONTROL "", 380, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 362, 214, 68, 11
-  CONTROL "Compras", -1, "Button", BS_GROUPBOX, 43, 76, 449, 25
-  CONTROL "", 390, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 281, 228, 68, 11
-  CONTROL "", 400, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 362, 228, 68, 11
-  CONTROL "", 120, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 281, 256, 68, 11
-  CONTROL "", 600, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 441, 256, 44, 11
-  CONTROL "", 410, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 441, 144, 44, 11
-  CONTROL "", 420, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 441, 158, 44, 11
-  CONTROL "", 430, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 441, 172, 44, 11
-  CONTROL "", 440, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 441, 186, 44, 11
-  CONTROL "", 450, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 441, 200, 44, 11
-  CONTROL "", 460, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 441, 214, 44, 11
-  CONTROL "Utilizar margen de ajuste", 470, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 400, 47, 90, 10
-  CONTROL "Costo", -1, "Static", WS_GROUP, 49, 90, 21, 8
-  CONTROL "Precios", -1, "Button", BS_GROUPBOX, 44, 107, 448, 139
-  CONTROL "Punto verde", -1, "Static", WS_GROUP, 53, 229, 50, 10
-  CONTROL "Precio venta minimo ", -1, "Static", WS_GROUP, 52, 259, 71, 8
-  CONTROL "% Rentabilidad mínima", -1, "Static", WS_GROUP, 362, 259, 77, 8
-  CONTROL "%Beneficio", -1, "Button", BS_GROUPBOX, 114, 133, 159, 110
-  CONTROL "Neto", -1, "Button", BS_GROUPBOX, 276, 133, 77, 110
-  CONTROL "Impuestos incluidos", -1, "Button", BS_GROUPBOX, 356, 133, 77, 110
-  CONTROL "Precios", -1, "Button", BS_GROUPBOX, 48, 133, 63, 110
-  CONTROL "Precio 1", 171, "Static", WS_GROUP, 53, 146, 50, 10
-  CONTROL "Precio 2", 211, "Static", WS_GROUP, 53, 160, 50, 10
-  CONTROL "Precio 3", 251, "Static", WS_GROUP, 53, 174, 50, 10
-  CONTROL "Precio 4", 291, "Static", WS_GROUP, 53, 188, 50, 10
-  CONTROL "Precio 5", 331, "Static", WS_GROUP, 53, 202, 50, 10
-  CONTROL "Precio 6", 371, "Static", WS_GROUP, 53, 216, 50, 10
+  CONTROL "", 111, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 105, 86, 70, 11
+  CONTROL "Codificación de proveedores", 510, "Button", WS_TABSTOP, 362, 83, 123, 14
+  CONTROL "Incluido", 821, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 113, 127, 36, 10
+  CONTROL "Bloq. %", 150, "Button", BS_AUTOCHECKBOX|BS_LEFTTEXT|WS_TABSTOP, 160, 127, 36, 10
+  CONTROL "", 160, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 201, 125, 44, 11
+  CONTROL "", 165, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|WS_TABSTOP, 248, 125, 42, 33
+  CONTROL "", 170, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 297, 125, 60, 11
+  CONTROL "", 180, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 369, 125, 60, 11
+  CONTROL "Incluido", 822, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 113, 141, 36, 10
+  CONTROL "Bloq. %", 190, "Button", BS_AUTOCHECKBOX|BS_LEFTTEXT|WS_TABSTOP, 160, 141, 36, 10
+  CONTROL "", 200, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 201, 139, 44, 11
+  CONTROL "", 205, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|WS_TABSTOP, 248, 139, 42, 33
+  CONTROL "", 210, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 297, 139, 60, 11
+  CONTROL "", 220, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 369, 139, 60, 11
+  CONTROL "Incluido.", 823, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 113, 155, 36, 10
+  CONTROL "Bloq. %", 230, "Button", BS_AUTOCHECKBOX|BS_LEFTTEXT|WS_TABSTOP, 160, 155, 36, 10
+  CONTROL "", 240, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 201, 153, 44, 11
+  CONTROL "", 245, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|WS_TABSTOP, 248, 153, 42, 33
+  CONTROL "", 250, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 297, 153, 60, 11
+  CONTROL "", 260, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 369, 153, 60, 11
+  CONTROL "Incluido", 824, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 113, 169, 36, 10
+  CONTROL "Bloq. %", 270, "Button", BS_AUTOCHECKBOX|BS_LEFTTEXT|WS_TABSTOP, 160, 169, 36, 10
+  CONTROL "", 280, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 201, 167, 44, 11
+  CONTROL "", 285, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|WS_TABSTOP, 248, 167, 42, 33
+  CONTROL "", 290, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 297, 167, 60, 11
+  CONTROL "", 300, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 369, 167, 60, 11
+  CONTROL "Incluido", 825, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 113, 183, 36, 10
+  CONTROL "Bloq. %", 310, "Button", BS_AUTOCHECKBOX|BS_LEFTTEXT|WS_TABSTOP, 160, 183, 36, 10
+  CONTROL "", 320, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 201, 181, 44, 11
+  CONTROL "", 325, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|WS_TABSTOP, 248, 181, 42, 33
+  CONTROL "", 330, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 297, 181, 60, 11
+  CONTROL "", 340, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 369, 181, 60, 11
+  CONTROL "Incluido", 826, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 113, 197, 36, 10
+  CONTROL "Bloq. %", 350, "Button", BS_AUTOCHECKBOX|BS_LEFTTEXT|WS_TABSTOP, 160, 197, 36, 10
+  CONTROL "", 360, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 201, 195, 44, 11
+  CONTROL "", 365, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|WS_TABSTOP, 248, 195, 42, 33
+  CONTROL "", 370, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 297, 195, 60, 11
+  CONTROL "", 380, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 369, 195, 60, 11
+  CONTROL "Compras", -1, "Button", BS_GROUPBOX, 43, 75, 449, 25
+  CONTROL "Incluido", 827, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 113, 210, 36, 10
+  CONTROL "", 390, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 297, 209, 60, 11
+  CONTROL "", 400, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 369, 209, 60, 11
+  CONTROL "", 120, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 297, 237, 60, 11
+  CONTROL "", 600, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 441, 237, 44, 11
+  CONTROL "", 410, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 441, 125, 44, 11
+  CONTROL "", 420, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 441, 139, 44, 11
+  CONTROL "", 430, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 441, 153, 44, 11
+  CONTROL "", 440, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 441, 167, 44, 11
+  CONTROL "", 450, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 441, 181, 44, 11
+  CONTROL "", 460, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 441, 195, 44, 11
+  CONTROL "Costo", -1, "Static", WS_GROUP, 49, 89, 21, 8
+  CONTROL "Precios", -1, "Button", BS_GROUPBOX, 44, 103, 448, 127
+  CONTROL "Punto verde", -1, "Static", WS_GROUP, 53, 210, 50, 10
+  CONTROL "Precio venta minimo ", -1, "Static", WS_GROUP, 52, 240, 71, 8
+  CONTROL "% Rentabilidad mínima", -1, "Static", WS_GROUP, 362, 240, 77, 8
+  CONTROL "%Beneficio", -1, "Button", BS_GROUPBOX, 156, 114, 136, 110
+  CONTROL "Neto", -1, "Button", BS_GROUPBOX, 293, 114, 68, 110
+  CONTROL "Impuestos incluidos", -1, "Button", BS_GROUPBOX, 363, 114, 70, 110
+  CONTROL "Precios", -1, "Button", BS_GROUPBOX, 48, 114, 60, 110
+  CONTROL "Precio 1", 171, "Static", WS_GROUP, 53, 127, 50, 10
+  CONTROL "Precio 2", 211, "Static", WS_GROUP, 53, 141, 50, 10
+  CONTROL "Precio 3", 251, "Static", WS_GROUP, 53, 155, 50, 10
+  CONTROL "Precio 4", 291, "Static", WS_GROUP, 53, 169, 50, 10
+  CONTROL "Precio 5", 331, "Static", WS_GROUP, 53, 183, 50, 10
+  CONTROL "Precio 6", 371, "Static", WS_GROUP, 53, 197, 50, 10
   CONTROL "", 500, "Static", SS_BITMAP|SS_CENTERIMAGE, 4, 3, 34, 30
   CONTROL "Precios y descuentos del artículo", -1, "Static", SS_LEFTNOWORDWRAP, 44, 3, 446, 8
-  CONTROL "Dto%", -1, "Button", BS_GROUPBOX, 436, 133, 52, 110
-  CONTROL "Margen de ajuste", -1, "Button", BS_GROUPBOX, 393, 36, 99, 38
-  CONTROL "", 480, "ComboBox", WS_BORDER|CBS_DROPDOWN|WS_VSCROLL|WS_TABSTOP, 400, 58, 48, 94
+  CONTROL "Dto%", -1, "Button", BS_GROUPBOX, 435, 114, 52, 110
   CONTROL "Tipo impuesto", -1, "Static", WS_GROUP, 49, 49, 49, 8
   CONTROL "Impuesto esp.", -1, "Static", WS_GROUP, 49, 61, 49, 8
-  CONTROL "Impuestos", -1, "Button", BS_GROUPBOX, 44, 36, 347, 38
-  CONTROL "", -1, "Button", BS_GROUPBOX, 43, 248, 448, 23
+  CONTROL "Impuestos", -1, "Button", BS_GROUPBOX, 44, 36, 447, 38
+  CONTROL "", -1, "Button", BS_GROUPBOX, 43, 229, 448, 23
+  CONTROL "IVA", -1, "Button", BS_GROUPBOX, 109, 114, 44, 110
 }
 
 ART_6 DIALOG DISCARDABLE 32, 6, 496, 286
