--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -11790,7 +11790,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "Promoción %", -1, "Static", WS_GROUP, 4, 32, 43, 8
 }
 
-LALBCLI_2 DIALOG DISCARDABLE 16, 4, 359, 217
+LALBCLI_2 DIALOG DISCARDABLE 16, 4, 359, 253
 STYLE WS_CHILD|DS_3DLOOK
 FONT 8, "MS Sans Serif"
 {
@@ -11798,35 +11798,38 @@ FONT 8, "MS Sans Serif"
   CONTROL "No imprimir línea ", 110, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 5, 15, 75, 10
   CONTROL "", 120, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 100, 24, 60, 11
   CONTROL "Línea de control", 130, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 5, 39, 75, 10
-  CONTROL "", 140, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER, 100, 48, 60, 11
-  CONTROL "", 220, "Edit", WS_BORDER|WS_TABSTOP, 100, 61, 255, 11
-  CONTROL "", 150, "Edit", WS_BORDER|WS_TABSTOP, 100, 74, 60, 11
-  CONTROL "", 151, "Edit", WS_BORDER, 161, 74, 194, 11
-  CONTROL "", 160, "Edit", WS_BORDER|WS_TABSTOP, 100, 87, 60, 11
-  CONTROL "", 161, "Edit", WS_BORDER, 161, 87, 194, 11
-  CONTROL "", 200, "Edit", WS_BORDER|WS_TABSTOP, 100, 100, 60, 11
-  CONTROL "", 201, "Edit", WS_BORDER, 161, 100, 194, 11
-  CONTROL "", 300, "Edit", ES_RIGHT|WS_BORDER, 100, 126, 100, 11
-  CONTROL "Línea de escandallo", 330, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 5, 139, 78, 10
-  CONTROL "Precio en escandallo", 340, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 99, 139, 79, 10
-  CONTROL "Control de stocks", 350, "Button", BS_AUTORADIOBUTTON, 5, 162, 68, 10
-  CONTROL "Contadores", 351, "Button", BS_AUTORADIOBUTTON|WS_GROUP, 5, 175, 49, 10
-  CONTROL "No controlar stock", 352, "Button", BS_AUTORADIOBUTTON|WS_GROUP, 5, 188, 71, 10
-  CONTROL "", 360, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 100, 197, 60, 11
-  CONTROL "", 361, "Edit", ES_MULTILINE|WS_BORDER, 162, 197, 40, 11
+  CONTROL "", 140, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER, 100, 49, 60, 11
+  CONTROL "", 220, "Edit", WS_BORDER|WS_TABSTOP, 100, 62, 255, 11
+  CONTROL "", 150, "Edit", WS_BORDER|WS_TABSTOP, 100, 75, 60, 11
+  CONTROL "", 151, "Edit", WS_BORDER, 161, 75, 194, 11
+  CONTROL "", 160, "Edit", WS_BORDER|WS_TABSTOP, 100, 88, 60, 11
+  CONTROL "", 161, "Edit", WS_BORDER, 161, 88, 194, 11
+  CONTROL "", 200, "Edit", WS_BORDER|WS_TABSTOP, 100, 101, 60, 11
+  CONTROL "", 201, "Edit", WS_BORDER, 161, 101, 194, 11
+  CONTROL "", 300, "Edit", ES_RIGHT|WS_BORDER, 100, 127, 100, 11
+  CONTROL "Línea de escandallo", 330, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 5, 140, 78, 10
+  CONTROL "Precio en escandallo", 340, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 99, 140, 79, 10
+  CONTROL "Control de stocks", 350, "Button", BS_AUTORADIOBUTTON, 5, 163, 68, 10
+  CONTROL "Contadores", 351, "Button", BS_AUTORADIOBUTTON|WS_GROUP, 5, 176, 49, 10
+  CONTROL "No controlar stock", 352, "Button", BS_AUTORADIOBUTTON|WS_GROUP, 5, 189, 71, 10
+  CONTROL "", 360, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 100, 198, 60, 11
+  CONTROL "", 361, "Edit", ES_MULTILINE|WS_BORDER, 162, 198, 38, 11
   CONTROL "Posición", -1, "Static", WS_GROUP, 5, 4, 30, 8
-  CONTROL "Precio vta. recomendado", -1, "Static", WS_GROUP, 5, 51, 80, 8
+  CONTROL "Precio vta. recomendado", -1, "Static", WS_GROUP, 5, 52, 80, 8
   CONTROL "Fecha de entrega", -1, "Static", WS_GROUP, 5, 27, 66, 8
-  CONTROL "Imágen ", -1, "Static", WS_GROUP, 5, 63, 73, 8
-  CONTROL "Grupo de familia", -1, "Static", WS_GROUP, 5, 77, 55, 8
-  CONTROL "Familia", -1, "Static", WS_GROUP, 5, 90, 55, 8
-  CONTROL "Margen", 301, "Static", WS_GROUP, 5, 128, 24, 8
-  CONTROL "Proveedor", -1, "Static", WS_GROUP, 5, 103, 55, 8
-  CONTROL "Stock", 4001, "Button", BS_GROUPBOX|WS_TABSTOP, 2, 151, 354, 63
-  CONTROL "Fecha valor stock", -1, "Static", WS_GROUP, 7, 201, 68, 11
-  CONTROL "", 370, "Edit", WS_BORDER, 100, 113, 60, 11
-  CONTROL "", 371, "Edit", WS_BORDER, 161, 113, 194, 11
-  CONTROL "Centro de Coste", 4002, "Static", WS_GROUP, 5, 115, 55, 8
+  CONTROL "Imágen ", -1, "Static", WS_GROUP, 5, 64, 73, 8
+  CONTROL "Grupo de familia", -1, "Static", WS_GROUP, 5, 78, 55, 8
+  CONTROL "Familia", -1, "Static", WS_GROUP, 5, 91, 55, 8
+  CONTROL "Margen", 301, "Static", WS_GROUP, 5, 129, 24, 8
+  CONTROL "Proveedor", -1, "Static", WS_GROUP, 5, 104, 55, 8
+  CONTROL "Stock", 4001, "Button", BS_GROUPBOX|WS_TABSTOP, 2, 152, 354, 63
+  CONTROL "Fecha valor stock", -1, "Static", WS_GROUP, 5, 202, 68, 11
+  CONTROL "", 370, "Edit", WS_BORDER, 100, 114, 60, 11
+  CONTROL "", 371, "Edit", WS_BORDER, 161, 114, 194, 11
+  CONTROL "Centro de Coste", 4002, "Static", WS_GROUP, 5, 116, 55, 8
+  CONTROL "", 380, "Edit", WS_BORDER, 100, 223, 100, 11
+  CONTROL "Número pedido", -1, "Static", WS_GROUP, 5, 225, 53, 8
+  CONTROL "", -1, "Button", BS_GROUPBOX|WS_TABSTOP, 2, 214, 354, 26
 }
 
 LANGUAGE LANG_ENGLISH,SUBLANG_ENGLISH_US
@@ -17081,10 +17084,12 @@ FONT 8, "MS Sans Serif"
   CONTROL "Modificar [F3]", 501, "Button", WS_TABSTOP, 102, 110, 50, 14
   CONTROL "&Eliminar [F4]", 502, "Button", WS_TABSTOP, 156, 110, 50, 14
   CONTROL "&Importar", 503, "Button", WS_TABSTOP, 210, 110, 50, 14
+  CONTROL "C&obrado", 504, "Button", WS_TABSTOP, 504, 111, 50, 14
+  CONTROL "&Pendiente", 505, "Button", WS_TABSTOP, 557, 111, 50, 14
   CONTROL "", 150, "TXBrowse", WS_TABSTOP|0x00300000, 50, 126, 557, 210
   CONTROL "&Aceptar [F5]", 511, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 502, 345, 50, 14
   CONTROL "&Cancelar", 510, "Button", WS_TABSTOP, 557, 345, 50, 14
-  CONTROL "TBitmap", 141, "TBitmap", 0x00800000, 412, 52, 16, 11
+  CONTROL "TBitmap", 141, "TBitmap", 0x00800000, 413, 52, 16, 11
   CONTROL "Recibos", -1, "Button", BS_GROUPBOX|WS_TABSTOP, 44, 97, 570, 244
   CONTROL "Cuenta", -1, "Static", WS_GROUP, 295, 42, 44, 8
   CONTROL "Número", -1, "Static", WS_GROUP, 51, 42, 34, 8
@@ -17838,27 +17843,27 @@ SELECTLABELS_1 DIALOG DISCARDABLE 113, 78, 390, 194
 STYLE WS_CHILD|DS_3DLOOK|WS_VISIBLE
 FONT 8, "MS Sans Serif"
 {
-  CONTROL "", 100, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 74, 12, 28, 12
-  CONTROL "", 120, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 105, 12, 55, 12
-  CONTROL "", 140, "Edit", WS_BORDER|WS_TABSTOP, 162, 12, 18, 12
-  CONTROL "", 110, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 74, 25, 28, 12
-  CONTROL "", 130, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 105, 25, 55, 12
-  CONTROL "", 150, "Edit", WS_BORDER|WS_TABSTOP, 162, 25, 18, 12
+  CONTROL "", 100, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 45, 12, 28, 12
+  CONTROL "", 120, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 74, 12, 56, 12
+  CONTROL "", 140, "Edit", WS_BORDER|WS_TABSTOP, 131, 12, 18, 12
+  CONTROL "", 110, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 45, 25, 28, 12
+  CONTROL "", 130, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 74, 25, 56, 12
+  CONTROL "", 150, "Edit", WS_BORDER|WS_TABSTOP, 131, 25, 18, 12
   CONTROL "Rango", -1, "Button", BS_GROUPBOX, 2, 2, 382, 39
-  CONTROL "Inicio", -1, "Static", WS_GROUP, 8, 15, 36, 8
-  CONTROL "Fin", -1, "Static", WS_GROUP, 8, 28, 35, 8
+  CONTROL "Inicio", -1, "Static", WS_GROUP, 8, 15, 22, 8
+  CONTROL "Fin", -1, "Static", WS_GROUP, 8, 28, 15, 8
   CONTROL "Formato de etiquetas", -1, "Button", BS_GROUPBOX, 2, 44, 382, 53
-  CONTROL "", 160, "Edit", WS_BORDER|WS_TABSTOP, 74, 55, 50, 12
-  CONTROL "", 161, "Edit", WS_BORDER|WS_TABSTOP, 125, 55, 241, 12
-  CONTROL "", 180, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 74, 68, 50, 12
-  CONTROL "", 190, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 74, 81, 50, 12
+  CONTROL "", 160, "Edit", WS_BORDER|WS_TABSTOP, 74, 55, 56, 12
+  CONTROL "", 161, "Edit", WS_BORDER|WS_TABSTOP, 131, 55, 235, 12
+  CONTROL "", 180, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 74, 68, 56, 12
+  CONTROL "", 190, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 74, 81, 56, 12
   CONTROL "Cantidad en documento", 200, "Button", BS_AUTORADIOBUTTON, 7, 111, 89, 10
-  CONTROL "Fijo", 201, "Button", BS_AUTORADIOBUTTON, 7, 123, 24, 10
-  CONTROL "", 210, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 74, 123, 50, 12
+  CONTROL "Fijo", 201, "Button", BS_AUTORADIOBUTTON, 7, 125, 24, 10
+  CONTROL "", 210, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 74, 123, 56, 12
   CONTROL "Código", -1, "Static", WS_GROUP, 7, 58, 35, 8
   CONTROL "Iniciar en fila", -1, "Static", WS_GROUP, 7, 71, 45, 8
   CONTROL "Iniciar en columna", -1, "Static", WS_GROUP, 7, 84, 63, 8
-  CONTROL "Número de etiquetas a imprimir", -1, "Button", BS_GROUPBOX, 2, 100, 382, 38
+  CONTROL "Número de etiquetas a imprimir", -1, "Button", BS_GROUPBOX, 2, 100, 382, 40
   CONTROL "", 220, "TBtnBmp", 0x00000000, 368, 54, 12, 12
 }
 
